--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,29 +1,28 @@
 name: chat_direct
-description: A new Flutter project.
+description: A simple app to open whatsapp chats without saving numbers.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 2.0.0
+version: 1.0.0
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   flutter_keyboard_visibility: ^6.0.0
-  flutter_svg: ^2.0.10+1
-  fluttertoast: ^8.2.8
-  provider: ^6.1.2
-  url_launcher: ^6.3.0
+  flutter_svg: ^2.2.1
+  fluttertoast: ^9.0.0
+  provider: ^6.1.5+1
+  url_launcher: ^6.3.2
   hive_flutter: ^1.1.0
 
 dev_dependencies:
-  change_app_package_name: ^1.3.0
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
 
