--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,4 +30,5 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/
+    - assets/whatsapp.svg
+    - "assets/country phone codes.json"
