--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,16 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-
+  country_flags: ^4.1.0
   flutter_keyboard_visibility: ^6.0.0
-  flutter_svg: ^2.2.1
+  flutter_svg: ^2.2.2
   fluttertoast: ^9.0.0
+  hive_flutter: ^1.1.0
   provider: ^6.1.5+1
   url_launcher: ^6.3.2
-  hive_flutter: ^1.1.0
+
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
   flutter_lints: ^6.0.0
